--- a/deployment/sumapp-deploy.yml
+++ b/deployment/sumapp-deploy.yml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1beta1 
 kind: Deployment
 metadata:
-  name: liberty4all
+  name: sumapp
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        app: liberty4all
+        app: sumapp
     spec:
       containers:
       - name: liberty4all
-        image: mycluster.icp:8500/demo/liberty4all
+        image: mycluster.icp:8500/demo/sumapp
         ports:
         - containerPort: 9080
